sources/apps/traefik/4-test-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: becamex-app-api
  namespace: traefik-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`traefik-ingress.io`) && PathPrefix(`/`)
    kind: Rule
    services:
    - name: auth-auth-api
      port: 80
  - match: Host(`traefik-ingress.io`) && PathPrefix(`/httpd`)
    kind: Rule
    services:
    - name: http-test-svc
      port: 80
